{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 603,
  "lineage": "03e755d5-1fe0-d0e0-89c9-5c34e669cac1",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "availability_zone": "Zone-Redundant",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/Public_Firewall_RG/providers/Microsoft.Network/publicIPAddresses/firewallpublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.226.209.42",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "firewallpublicIP",
            "resource_group_name": "Public_Firewall_RG",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.FirewallRG"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable1/routes/default",
            "name": "default",
            "next_hop_in_ip_address": "10.0.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "my-resources1",
            "route_table_name": "routetable1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "30.0.0.0/24",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable2/routes/spoke1tospoke2",
            "name": "spoke1tospoke2",
            "next_hop_in_ip_address": "10.0.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "my-resources1",
            "route_table_name": "routetable2",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.0.0/24",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable1/routes/spoke2tospoke1",
            "name": "spoke2tospoke1",
            "next_hop_in_ip_address": "10.0.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "my-resources1",
            "route_table_name": "routetable1",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "0.0.0.0/0",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable2/routes/default",
            "name": "default",
            "next_hop_in_ip_address": "10.0.0.4",
            "next_hop_type": "VirtualAppliance",
            "resource_group_name": "my-resources1",
            "route_table_name": "routetable2",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_firewall.Firewall",
            "azurerm_public_ip.publicIP",
            "azurerm_resource_group.FirewallRG",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_route_table",
      "name": "routetablename",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable1",
            "location": "eastus",
            "name": "routetable1",
            "resource_group_name": "my-resources1",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "disable_bgp_route_propagation": false,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable2",
            "location": "eastus",
            "name": "routetable2",
            "resource_group_name": "my-resources1",
            "route": [],
            "subnets": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "20.0.0.0/24",
            "address_prefixes": [
              "20.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/spoke1-subnet",
            "name": "spoke1-subnet",
            "resource_group_name": "my-resources1",
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "30.0.0.0/24",
            "address_prefixes": [
              "30.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/spoke2-subnet",
            "name": "spoke2-subnet",
            "resource_group_name": "my-resources1",
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.0.0/24",
            "address_prefixes": [
              "10.0.0.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/hub-vnet/subnets/AzureFirewallSubnet",
            "name": "AzureFirewallSubnet",
            "resource_group_name": "my-resources1",
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_route_table_association",
      "name": "subnetassociate1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/spoke1-subnet",
            "route_table_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable2",
            "subnet_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/subnets/spoke1-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.routetablename",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/spoke2-subnet",
            "route_table_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/routeTables/routetable1",
            "subnet_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/subnets/spoke2-subnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_route_table.routetablename",
            "azurerm_subnet.subnets",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "guid": "849daf1f-8a35-4e41-96c5-77d6d0a74cf8",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "location": "eastus",
            "name": "hub-vnet",
            "resource_group_name": "my-resources1",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "20.0.0.0/16"
            ],
            "guid": "bbe7e374-99d2-45b0-960c-7183bb247dc6",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "location": "eastus",
            "name": "spoke1-vnet",
            "resource_group_name": "my-resources1",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "30.0.0.0/16"
            ],
            "guid": "ddce19b2-f443-4704-9e7a-d9233bc02234",
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "location": "eastus",
            "name": "spoke2-vnet",
            "resource_group_name": "my-resources1",
            "vm_protection_enabled": false
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/peering-from-Hub-vnet-to-spoke1-vnet",
            "name": "peering-from-Hub-vnet-to-spoke1-vnet",
            "remote_virtual_network_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke1-vnet",
            "resource_group_name": "my-resources1",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/hub-vnet/virtualNetworkPeerings/peering-from-Hub-vnet-to-spoke2-vnet",
            "name": "peering-from-Hub-vnet-to-spoke2-vnet",
            "remote_virtual_network_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke2-vnet",
            "resource_group_name": "my-resources1",
            "use_remote_gateways": false,
            "virtual_network_name": "hub-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network_peering",
      "name": "peering1",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke1-vnet/virtualNetworkPeerings/peering-from-spoke1-vnet-To-Hub-vnet",
            "name": "peering-from-spoke1-vnet-To-Hub-vnet",
            "remote_virtual_network_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "my-resources1",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke1-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allow_forwarded_traffic": true,
            "allow_gateway_transit": false,
            "allow_virtual_network_access": true,
            "id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/spoke2-vnet/virtualNetworkPeerings/peering-from-spoke2-vnet-To-Hub-vnet",
            "name": "peering-from-spoke2-vnet-To-Hub-vnet",
            "remote_virtual_network_id": "/subscriptions/cecae6d9-5001-4d80-b8cf-615d7bb3ed95/resourceGroups/my-resources1/providers/Microsoft.Network/virtualNetworks/hub-vnet",
            "resource_group_name": "my-resources1",
            "use_remote_gateways": false,
            "virtual_network_name": "spoke2-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    }
  ]
}